2002-03-03  Joel Rosdahl  <joel@lysator.liu.se>

	Fixed bug 392 and cleaned up printing of text summaries in
	kom-list-summary and kom-list-marks:

	* commands2.el (lyskom-max-text-no-width): New function.
	(lyskom-construct-summary-format-string): New function.
	(lyskom-do-list-summary): Use lyskom-construct-summary-format-string.
	(lyskom-print-summary-line): Get format string as an argument
	instead of building it at each call.
	(kom-list-marks): Use lyskom-construct-summary-format-string.
	(lyskom-print-mark-summary-line): Get format string as an argument
	instead of building it at each call.
	(lyskom-max-mark-width): Added doc string.

	* swedish-strings.el (lyskom-message): Don't abbreviate Lines.

	* english-strings.el (lyskom-message): Don't abbreviate Lines and
	mark-type.  Trimmed whitespace from Author and Subject.

2002-03-03  Per Cederqvist  <ceder@lysator.liu.se>

	Fix bug 406:
	* lyskom-rest.el (lyskom-report-command-answer): Factor out some
	code to lyskom-insert-error.
	(lyskom-insert-error): New function.
	(lyskom-current-error): Call lyskom-insert-error instead of
	issuing a broken call to lyskom-format-insert

	* commands1.el (lyskom-add-member-answer): Save err-stat as well
	as errno.  Use lyskom-insert-error instead of a broken call to
	lyskom-format-insert.  Use the saved errno in all cases, not just
	some.
	(kom-create-conf): Use lyskom-insert-error instead of a broken
	call to lyskom-format-insert.

	* commands2.el (kom-change-conf-type): Use lyskom-insert-error
	instead of a broken call to lyskom-format-insert.

2002-03-03  Joel Rosdahl  <joel@lysator.liu.se>

	* utilities.el (lyskom-current-time): Removed obsolete function.

2002-03-02  Joel Rosdahl  <joel@lysator.liu.se>

	* commands2.el: Removed some erroneous indentation.

	Fixed bug 387:

	* lyskom-buttons.el (lyskom-view-url-windows): Rewritten (based on
	work by Klaus Zeuge).

	* compatibility.el (w32-shell-execute): New dummy function.
