@@ -1,5 +1,16 @@
 2002-03-03  Joel Rosdahl  <joel@lysator.liu.se>
 
+	Fixes to make "make check" happy again:
+
+	* english-strings.el: Added ending mismatch exception for
+	newyeareve.
+	(lyskom-message): Added year reference to newyearevelate.
+	(lyskom-month-names): Make lyskom-month-names belong to en instead
+	of sv.  Corrected month names.
+
+	* option-edit.el (lyskom-custom-variables): Removed bogus nil at
+	the end.
+
 	Fixed bug 392 and cleaned up printing of text summaries in
 	kom-list-summary and kom-list-marks:
 
